# testttttt

./: .gitignore  ORCHESTRATION_USAGE.md  orchestration_catalog.yml  pyproject.toml  short_term_manager.py  start.py  state_schema.json
data/: short_term_memory.json
manager/: base_master.py  catalog.py  document_master.py  email_master.py  qa_master.py  schedule_master.py  supervisor.py  technology_master.py
tool/Q&A/: manual_search_rag.py  menu_inquiry.py  menu_recommendation.py  welfare_inquiry.py
tool/기술/: paper_search.py  paper_vectorization.py  patent_search.py  patent_vectorization.py
tool/문서/: auto_approval_request.py  document_auto_creation.py  knowledge_upload_rag.py  pdf_conversion.py
tool/스케줄/: annual_leave_application.py  annual_leave_inquiry.py  meeting_room_inquiry.py  meeting_room_recommendation.py  meeting_room_reservation_cancel.py  schedule_inquiry.py  schedule_notification.py  schedule_register_cancel.py
tool/이메일/: auto_sending.py  email_receipt_detection.py  email_search.py  reply_draft_generation.py
